--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "install": "^0.13.0",
+    "npm": "^9.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
